model view 추가 lda view 추가 table 제작중

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/latest
+                /css/bootstrap.min.css">
+ 
+    <!-- bootstrap theme (Optional) -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/latest
+               /css/bootstrap-theme.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bokeh/2.2.3/bokeh.min.js" integrity="sha512-x3Vkyovm5LWmdkjZgP4YDWK9mcz8Ab0nKj5wi5Uz80schrJKGijIZVX4OPom5Clpeq2ExBHKwl8EciMe1W8eqw==" crossorigin="anonymous"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bokeh/2.2.3/bokeh-api.min.js" integrity="sha512-s/YN0zROhWpUM4bjvxKjmPFdqwTPA/xnQVd2je1U+cpgY4GWbMCtwVPFYfm1W+aC1Y+QRKYhMuJSuG0vIR0wZA==" crossorigin="anonymous"></script>
     
